build the app, yuh
Co-authored-by: Sam McGrail <sammcgrail@users.noreply.github.com>
Co-authored-by: Ian Hills <v@bitvox.me>

--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -14,7 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-color: #141414;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -34,5 +35,24 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.username {
+  font-size: small;
+}
+
+.messageList {
+  font-size: small;
+  max-width: 900px;
+  text-align: left;
+
+  .message {
+    &.assistant {
+      background-color: #141414;
+    }
+    &.user {
+      background-color: darkblue;
+    }
   }
 }
